@@ -27,15 +27,15 @@ bases2 <- c("CO3-2", "HCO3-", "CO2")
 # note curved lines, particularly at the boundaries with siderite
 m1 <- mosaic(bases, bases2, pH = pH, Eh = Eh, T = T)
 # make a diagram and add water stability lines
-diagram(m1$A.species, lwd = 2)
+diagram(m1$A.species, lwd = 2, limit.water = TRUE)
 water.lines(m1$A.species, col = "seagreen", lwd = 1.5)
 # show lines for Fe(aq) = 10^-4 M
 species(c("Fe+2", "Fe+3"), -4)
 m2 <- mosaic(bases, bases2, pH = pH, Eh = Eh, T = T)
-diagram(m2$A.species, add = TRUE, names = FALSE)
+diagram(m2$A.species, add = TRUE, names = FALSE, limit.water = TRUE)
 # overlay the sulfur and carbonate basis species predominance fields
-d <- diagram(m1$A.bases, add = TRUE, col = "red", col.names = "red", lty = 3, limit.water = FALSE)
-d <- diagram(m1$A.bases2, add = TRUE, col = "blue", names = FALSE, lty = 3, limit.water = FALSE)
+d <- diagram(m1$A.bases, add = TRUE, col = "red", col.names = "red", lty = 3)
+d <- diagram(m1$A.bases2, add = TRUE, col = "blue", names = FALSE, lty = 3)
 text(d$namesx, -0.8, as.expression(sapply(m1$A.bases2$species$name, expr.species)), col = "blue")
 # add legend and title
 dP <- describe.property(c("T", "P"), c(25, 1))
